增加知识点

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.application.name=nosql
 server.port=8080
 
 
+kafka-producer.bootstrap.servers=localhost:9092
+kafka-producer.zookeeper.connect=localhost:2181
+kafka-producer.asks=1
+kafka-producer.max.request.size=104857600
+kafka-producer.buffer.memory=104857600
+kafka-producer.retries=3
